# openviking-openclaw-bench

./: .gitignore  实验计划.md
OpenViking-LoCoMo10/: Load_Data.sh  README.md
OpenViking-LoCoMo10/.git.bak_cursor_push/: config  index  packed-refs
openclaw-openviking-doubao/: GET_DOUBAO_API_KEY.zh-CN.md  NOTICE  README.md  README.zh-CN.md  SOURCES.md  TUTORIAL.zh-CN.md
openclaw-openviking-doubao/.git.bak_cursor_push/: config  index  packed-refs
openclaw-openviking-doubao/plugin/: INSTALL.md
openclaw-openviking-doubao/scripts/: 00_check_requirements.sh  10_install_openclaw_stable.sh  11_onboard_openclaw.sh  20_install_openviking_local_doubao_prefilled.sh  21_install_openviking_local_doubao_env.sh  22_write_prefilled_ov_conf.sh  30_verify.sh  31_show_log_paths.sh  40_reset_openviking_data.sh  50_smoke_test.sh  bootstrap.sh  install_local_doubao.sh  install_local_openviking_context_engine.sh  install_remote_openviking_context_engine.sh  verify_openviking_openclaw.sh
openviking-openclaw-bench/: .gitignore  README.md  bench_config.example.json  pyproject.toml
openviking-openclaw-bench/docs/: KNOWN_LIMITATIONS.md
openviking-openclaw-bench/openviking_openclaw_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openviking-openclaw-bench/ovbench/: __init__.py  cli.py  config.py  eval.py  http_api.py  judge.py  judge_util.py  merge_results.py  openclaw_ops.py  report.py  util.py
openviking-openclaw-bench/scripts/: install_tools.sh  run_all_groups.sh  setup_all_groups.sh  smoke_all.sh
(+16 files in other folders)
